# Memory-Equipped-Agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
.devcontainer/: RAGfrRobots.Dockerfile  devcontainer.json
.github/: pull_request_template.md
docs/: Overview.md  Usage.md
util/container_scripts/: build_install.sh
ws/: .gitignore  frames_2024-10-06_13.17.56.gv  frames_2024-10-06_17.06.09.gv  memory_chunks.jsonl
ws/docs/: Overview.rst
ws/install/: local_setup.sh  setup.sh
ws/log/: latest_build
ws/src/: README.md
ws/src/construct_memory/: notes.md  package.xml  setup.cfg  setup.py
ws/src/construct_memory/construct_memory/: amcl_sub.py  construct_embedding.py  semantic_map.py
ws/src/environment_mapping/: CMakeLists.txt  package.xml
ws/src/environment_mapping/config/: debug.rviz
ws/src/environment_mapping/launch/: simulation.launch.py
ws/src/environment_mapping/maps/: .map_final.yaml
ws/src/environment_mapping/worlds/: house.world  house_10.world  house_3.world  house_4.world  house_6.world  (+2 more)
ws/src/rabbit_bringup/: CMakeLists.txt  package.xml
ws/src/retriever/: package.xml  setup.cfg  setup.py
ws/src/simulation/: CMakeLists.txt  package.xml
ws/src/simulation/launch/: localization_amcl.launch.py  navigation_nav2.launch.py  simulation_gazebo.launch.py
ws/src/simulation/maps/: .map.pgm  .map.yaml  .map_final.pgm
ws/src/simulation/models/box_room/: model.sdf
ws/src/simulation/params/: navigation_params.yaml
ws/src/simulation/worlds/: house_1.world  house_10v1.world  house_2.world  house_5.world  house_7.world  wip.world
(+509 files in other folders)
